Closed
Bug 1629955
Opened 5 years ago
Closed 5 years ago
Crash if Navigator.gpu returns NULL
Categories
(Core :: Graphics: WebGPU, defect, P3)
Core
Graphics: WebGPU
Tracking
()
RESOLVED
FIXED
mozilla77
People
(Reporter: kvark, Assigned: kvark)
References
Details
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
No description provided.
Assignee | ||
Comment 1•5 years ago
|
||
we can't fail at Navigator.gpu
Instead, we reject the promise of requestAdapter
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e2a5289dab0b
Don't fail WebGPU Instance creation r=jgilbert
Comment 3•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Assignee | ||
Comment 4•5 years ago
|
||
Comment on attachment 9140498 [details]
Don't fail WebGPU Instance creation
Beta/Release Uplift Approval Request
- User impact if declined: GPU process crash when trying to run WebGPU content, see bug 1612523
- Is this code covered by automated tests?: Unknown
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's technically covered by
dom/webgpu/mochitest/test_disabled.html
, although I'm not sure why it wasn't crashing there. Will look into that!
The change here is low risk, because it changes the logic that's already crashing, in a minor way. - String changes made/needed:
Attachment #9140498 -
Flags: approval-mozilla-beta?
Comment 5•5 years ago
|
||
Comment on attachment 9140498 [details]
Don't fail WebGPU Instance creation
Avoids a crash when WebGPU is disabled. Approved for 76.0b7.
Attachment #9140498 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 6•5 years ago
|
||
bugherder uplift |
status-firefox76:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•