Bug 1629955 - Don't fail WebGPU Instance creation r=jgilbert

we can't fail at Navigator.gpu
Instead, we reject the promise of requestAdapter

Differential Revision: https://phabricator.services.mozilla.com/D70903